# micro-c

./: CMakeLists.txt  CMakeLists_inc.txt  README.md
analysis/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  main.cpp
http/: CMakeLists.txt  client.cpp  client.h  common.cpp  common.h  server.c  server.h  xhttp.h
invoicing/: CMakeLists.txt  main.cpp
lxSTR/: CMakeLists.txt  README.md  lxArray.cpp  lxArray.h  lxSTR.h  lxStr.cpp  lxStr.h
reporting/: CMakeLists.txt  main.cpp
